--- a/Atividade_04_PPGCC_2025_1.ipynb
+++ b/Atividade_04_PPGCC_2025_1.ipynb
@@ -634,6 +634,54 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Questão D"
+      ],
+      "metadata": {
+        "id": "kW1uTSCzVSKG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Link do slide**\n",
+        "[Atividade-04-PPGCC-2025_1 questão D (significance_level)](https://docs.google.com/presentation/d/1903DLENRX_KeogZ_p7iaPZXeUvWboHST42emb2Im_WQ/edit?usp=sharing)"
+      ],
+      "metadata": {
+        "id": "mRTJzoM9VV1x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from scipy.stats import ttest_ind\n",
+        "\n",
+        "num_simulations = 10000\n",
+        "sample_size = 100\n",
+        "true_mean = 30\n",
+        "true_std = 10\n",
+        "significance_level = 0.05\n",
+        "significant_results = 0\n",
+        "for _ in range(num_simulations):\n",
+        "    group1 = np.random.normal(true_mean, true_std, sample_size)\n",
+        "    group2 = np.random.normal(true_mean, true_std, sample_size)\n",
+        "    t_stat, p_value = ttest_ind(group1, group2)\n",
+        "    if p_value < significance_level:\n",
+        "        significant_results += 1\n",
+        "proportion_significant = significant_results / num_simulations\n",
+        "print(f\"Number of simulations: {num_simulations}\")\n",
+        "print(f\"Significance level (alpha): {significance_level}\")\n",
+        "print(f\"Proportion of significant results (Type I error rate): {proportion_significant:.4f}\")"
+      ],
+      "metadata": {
+        "id": "wxVcisI5VhM3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -642,7 +690,8 @@
       "provenance": [],
       "collapsed_sections": [
         "alAsoSn0KhD6",
-        "v2gKMt_8PDFi"
+        "v2gKMt_8PDFi",
+        "z9Gs0vZlSKte"
       ],
       "include_colab_link": true
     },
